# ml-with-spark

./: .gitignore  .gitmodules  README.md  pyproject.toml
ml-with-spark/: 2-introduction-to-pyspark.ipynb  3-experiments-with-mlflow.ipynb  4-computing-statistics.ipynb  4-ingestion-preprocessing.ipynb  4-working-with-text.ipynb  4-zoo-animal-classification.ipynb  6-clustering-hyperparams.ipynb  6-gaussian-mixture.ipynb  6-imbalanced-data.ipynb  6-multilayer-perceptron.ipynb
ml-with-spark/static/: schema.json
ml-with-spark/tmp/pip_model/metadata/: .part-00000-cd458779-bf1a-4520-8567-662343028ab0-c000.txt.crc  part-00000-cd458779-bf1a-4520-8567-662343028ab0-c000.txt
ml-with-spark/tmp/pip_model/stages/0_FeatureHasher_5be132592033/metadata/: .part-00000-5a8b0806-3b3b-4859-8da2-9f96fd17808c-c000.txt.crc  part-00000-5a8b0806-3b3b-4859-8da2-9f96fd17808c-c000.txt
ml-with-spark/tmp/pip_model/stages/1_UnivariateFeatureSelector_5912b96f9673/data/: .part-00000-9c8cb011-b27f-46ab-827b-023894f8243e-c000.snappy.parquet.crc  part-00000-9c8cb011-b27f-46ab-827b-023894f8243e-c000.snappy.parquet
ml-with-spark/tmp/pip_model/stages/1_UnivariateFeatureSelector_5912b96f9673/metadata/: .part-00000-9ce02a3c-63be-4b5d-8981-ed0d8f044666-c000.txt.crc  part-00000-9ce02a3c-63be-4b5d-8981-ed0d8f044666-c000.txt
ml-with-spark/tmp/pip_model/stages/2_GaussianMixture_14a9b52a5679/data/: .part-00000-f60b4fd8-9e44-4d77-a5f6-6e97ffc34623-c000.snappy.parquet.crc  part-00000-f60b4fd8-9e44-4d77-a5f6-6e97ffc34623-c000.snappy.parquet
(+2 files in other folders)
