[tool.poetry]
name = "ml-with-spark"
version = "0.1.0"
description = "Tutorials from Scaling Machine Learning with Spark, by Adi Polak"
authors = ["Gabriel Fuentes <gafnts@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.30.1"
pyspark = "^4.0.0"
numpy = "^2.3.2"
pandas = "^2.3.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
ruff = "^0.12.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
